# GEMS-RAG

./: .gitignore  README.md  pyproject.toml
.gsd/: DECISIONS.md  KNOWLEDGE.md
configs/: ablation.template.json  external-rag.local-openai.smoke.json  external-rag.smoke.json  external-rag.template.json  manuscript-rags.json  megarag-addon-params.yaml  model-catalog.example.json  model-matrix.example.txt  mrag-prior-eval.json  mutcd150-comparison.json  mutcd150-gems-full-anthropic.json  retriever-catalog.example.json  smoke.local.json
docs/: MUTCD_RAG_EVALUATION_SPECIFICATION.md  external-adapters.md  implementation-inventory.md
patches/: gfmrag-retrieval-only.patch  hipporag-lazy-optional-backends.patch  megarag-empty-graph.patch  raganything-fail-closed.patch
scripts/: bootstrap_external_envs.sh  build_external_indexes.py  check_external_adapters.py  compare_run.py  export_mrag_corpus.py  export_upstream_eval_inputs.py  import_mrag_bundle.py  openai_endpoint_router.py  prepare_lpkg_plans.py  query_dpr_index.py  query_gfmrag_index.py  query_graphrag_index.py  query_hipporag_index.py  query_lightrag_index.py  query_megarag_index.py  query_mrag_reference.py  query_paperqa_index.py  query_raganything_index.py  query_vector_db.py  query_visrag_index.py  repair_mrag_metadata.py  summarize_run.py
tests/: browser_smoke.cjs  test_ablation_bundle.py  test_analysis.py  test_anthropic_batches.py  test_build_external_indexes.py  test_cli.py  test_comparison_study.py  test_config_templates.py  test_context_segments.py  test_control_plane.py  test_credentials.py  test_data.py  (+41 more)
(+71 files in other folders)
