[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gems-rag"
version = "0.1.0"
description = "Experiment harness for the GEMS-RAG MUTCD comparison study."
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.10,<2.0"]
numeric = ["numpy>=1.26,<3.0"]
llm = ["openai>=1.40", "litellm>=1.0"]
paperqa = ["paper-qa>=5.0"]
graphrag = ["graphrag>=3.0"]
hipporag = ["hipporag>=2.0.0a0"]
dev = ["pytest>=8.0"]

[project.scripts]
gems-rag = "gems_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gems_rag = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
